--- a/css/styles.css
+++ b/css/styles.css
@@ -119,6 +119,7 @@ img {
   line-height: 1.5; /* 150% */
   letter-spacing: 0.32px;
   position: relative;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-nav-list-item-link:hover {
@@ -137,7 +138,7 @@ img {
   width: 100%;
   height: 4px;
   border-radius: 2px;
-  background: #404bbf;
+  background-color: #404bbf;
 }
 
 /* Header padding to calculate container haight  */
@@ -167,6 +168,7 @@ address {
   font-weight: 400;
   line-height: 1.5; /* 150% */
   letter-spacing: 0.32px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-contacts-list-item-link:hover {
@@ -182,7 +184,15 @@ address {
 .order-section {
   padding: 188px 0;
   text-align: center;
-  background-color: #2e2f42;
+  background-image: linear-gradient(
+      to bottom,
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url('/images/peoples.jpg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 .order-title {
@@ -215,6 +225,7 @@ address {
   line-height: 1.5;
   letter-spacing: 0.64px;
   border-width: inherit;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .order-button:hover {
@@ -234,6 +245,14 @@ address {
 
 .strategy-list-item {
   flex-basis: calc((100% - 72px) / 4);
+}
+
+.strategy-svg-icon {
+  border-radius: 4px;
+  border: 1px solid #8e8f99;
+  background: #f4f4fd;
+  padding: 20px 100px;
+  margin-bottom: 8px;
 }
 
 .strategy-head-title {
@@ -286,8 +305,7 @@ address {
 }
 
 .team-section-text-cont {
-  padding-top: 32px;
-  padding-bottom: 32px;
+  padding: 32px 16px;
 }
 
 .team-section-item-title {
@@ -298,7 +316,6 @@ address {
   font-weight: 500;
   line-height: 1.2;
   letter-spacing: 0.4px;
-  margin-bottom: 8px;
 }
 
 .team-section-item-text {
@@ -307,6 +324,29 @@ address {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.32px;
+  margin-top: 8px;
+  margin-bottom: 8px;
+}
+
+/* Team block social media */
+.team-social-container {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+}
+.team-social-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #404bbf;
+  width: 40px;
+  height: 40px;
+  border-radius: 100%;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.team-social-link:hover {
+  background-color: #31d0aa;
 }
 
 /* Our Portfolio Section */
@@ -331,14 +371,51 @@ address {
 
 .portfolio-section-list {
   background-color: #fff;
+  border: 1px solid #e7e9fc;
   width: calc((100% - 48px) / 3);
-  padding-bottom: 32px;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.portfolio-section-list:hover {
+  border: 1px solid #f4f4fd;
+  background-color: #fff;
+  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+  cursor: pointer;
+}
+
+.portfolio-img-over-con {
+  position: relative;
+  overflow: hidden;
+}
+
+.overlay {
+  background-color: #4d5ae5;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  color: #f4f4fd;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.5; /* 150% */
+  letter-spacing: 0.32px;
+  padding-top: 40px;
+  padding-left: 32px;
+  padding-right: 32px;
+}
+
+.portfolio-section-list:hover .portfolio-img-over-con .overlay {
+  transform: translateY(0);
 }
 
 .portfolio-section-text-cont {
   padding: 32px 16px;
-  border: 1px solid #e7e9fc;
-  border-top: none;
+  /* border: 1px solid #e7e9fc; */
+  /* border-top: none; */
 }
 
 .portfolio-section-list-title {
@@ -365,6 +442,10 @@ address {
   background: #2e2f42;
 }
 
+.footer-logo-content-wrapper {
+  display: flex;
+}
+
 .footer-logo-first-part {
   display: inline-block;
   color: #4d5ae5;
@@ -375,6 +456,10 @@ address {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   margin-bottom: 16px;
+}
+
+.footer-logo-container {
+  margin-right: 120px;
 }
 
 .footer-logo-second-part {
@@ -394,4 +479,35 @@ address {
   line-height: 1.5; /* 150% */
   letter-spacing: 0.32px;
   max-width: 264px;
+}
+
+/* Social content */
+.footer-social-container {
+  display: flex;
+  gap: 16px;
+}
+.footer-social-media-title {
+  /* display: inline-block; */
+  margin-top: 0;
+  margin-bottom: 16px;
+  color: #fff;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5; /* 150% */
+  letter-spacing: 0.32px;
+}
+
+.fiiter-social-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #404bbf;
+  width: 40px;
+  height: 40px;
+  border-radius: 100%;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.fiiter-social-link:hover {
+  background-color: #31d0aa;
 }
