--- a/css/styles.css
+++ b/css/styles.css
@@ -189,7 +189,7 @@ address {
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
-    url('/images/peoples.jpg');
+    url('./images/peoples.jpg');
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
