--- a/css/styles.css
+++ b/css/styles.css
@@ -128,7 +128,7 @@ img {
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.32px;
-  /* transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1); */
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-nav-list-item-link-f::after {
@@ -230,6 +230,7 @@ address {
 /* ============== Main Conteiner ============== */
 /* Main Section Order Container  */
 .order-section {
+  max-width: 1440px;
   padding: 188px 0;
   text-align: center;
   background-image: linear-gradient(
