--- a/css/styles.css
+++ b/css/styles.css
@@ -120,7 +120,7 @@ img {
 /* Menu list link */
 
 /* Primitive */
-.header-nav-list-item-link-f {
+.header-nav-list-item > .header-nav-list-item-link {
   display: block;
   color: #404bbf;
   position: relative;
@@ -131,7 +131,7 @@ img {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.header-nav-list-item-link-f::after {
+.header-nav-list-item > .header-nav-list-item-link::after {
   content: '';
   position: absolute;
   bottom: -1px;
@@ -141,7 +141,7 @@ img {
   border-radius: 2px;
   background-color: #404bbf;
 }
-.header-nav-list-item-link-s {
+.header-nav-list-item-link {
   color: #2e2f42;
   font-size: 16px;
   font-weight: 500;
@@ -151,11 +151,11 @@ img {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.header-nav-list-item-link-s:hover {
+.header-nav-list-item-link:hover {
   color: #404bbf;
 }
 
-.header-nav-list-item-link-s:focus {
+.header-nav-list-item-link:focus {
   color: #404bbf;
 }
 
